# BSDiff

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/dongnao/bsdiff/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: bspatch.c  native-lib.cpp
app/src/main/java/com/dongnao/bsdiff/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/dongnao/bsdiff/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
